--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -72,4 +72,4 @@ jobs:
           upload_url: ${{steps.create_release.outputs.upload_url}}
           asset_path: ./${{github.sha}}.zip
           asset_name: source_code_with_lib.zip
-          asset_type: application/zip
+          asset_content_type: application/zip
