--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -56,7 +56,7 @@ jobs:
          aws-region: us-east-1
      - name: Update function
        run: |
-           aws lambda update-function \
+           aws lambda update-function-code \
            --functions-name GHActions-lambda \
            --s3-bucket github-actions-bucket-456677788 \
            --s3-key ${{github.sha}}.zip \
