--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -57,7 +57,7 @@ jobs:
      - name: Update function
        run: |
            aws lambda update-function-code \
-             --functions-name GHActions-lambda \
+             --function-name GHActions-lambda \
              --s3-bucket github-actions-bucket-456677788 \
              --s3-key ${{github.sha}}.zip \
              --publish
