--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    needs: lint
     steps: 
       - name: Checkout code
         uses: actions/checkout@v2
@@ -61,4 +62,22 @@ jobs:
              --s3-bucket github-actions-bucket-456677788 \
              --s3-key ${{github.sha}}.zip \
              --publish
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout-code@v2
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install lint libraries
+        run: |
+            cd function
+            pip install flake8
+      - name: Run Lint
+        run: |
+            flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+            flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
      
