--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -66,7 +66,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout-code@v2
+        uses: actions/checkout@v2
       - name: Setup python
         uses: actions/setup-python@v2
         with:
