--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -65,7 +65,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code
+      - name: Check out the code
         uses: actions/checkout@v2
       - name: Setup python
         uses: actions/setup-python@v2
